--- a/Thongkedungapi.ipynb
+++ b/Thongkedungapi.ipynb
@@ -31,109 +31,55 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "openai.api_key = \"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\"  # Thay bằng API key của bạn\n",
+    "# 🔑 Nhập API key OpenAI\n",
+    "openai.api_key = \"\"  # <-- Nhập API key ở đây\n",
     "\n",
-    "# 🔹 Đọc dữ liệu\n",
-    "with open(\"/opt/workspace/data.jsonl\", \"r\", encoding=\"utf-8\") as f:\n",
+    "# 📥 Đọc dữ liệu từ file JSONL\n",
+    "with open(\"/opt/workspace/gen_1604_formated.jsonl\", \"r\", encoding=\"utf-8\") as f:\n",
     "    data = [json.loads(line) for line in f]\n",
     "\n",
-    "questions = []\n",
-    "for item in data:\n",
-    "    messages = item.get(\"messages\", [])\n",
-    "    for m in messages:\n",
-    "        if m[\"role\"] == \"user\":\n",
-    "            questions.append(m[\"content\"].strip())\n",
+    "# 📌 Trích tất cả câu hỏi từ người dùng\n",
+    "questions = [\n",
+    "    m[\"content\"].strip()\n",
+    "    for item in data\n",
+    "    for m in item.get(\"messages\", [])\n",
+    "    if m[\"role\"] == \"user\"\n",
+    "]\n",
     "\n",
-    "# Loại bỏ câu hỏi trùng lặp trước khi nhóm\n",
-    "questions_unique = list(set(questions))  # Sử dụng set để loại bỏ trùng lặp\n",
-    "\n",
-    "# ✨ Prompt cho GPT để nhóm câu hỏi\n",
+    "# 🧠 Prompt: yêu cầu đếm tần suất các câu hỏi trùng lặp và trả về câu hỏi đại diện\n",
     "prompt = f\"\"\"\n",
-    "Bạn là trợ lý chuyên gom nhóm các câu hỏi có nội dung gần giống nhau.\n",
+    "Bạn là trợ lý phân tích và gom nhóm nội dung câu hỏi người dùng.\n",
     "\n",
-    "🔍 Hướng dẫn gom nhóm:\n",
-    "- Gom các câu hỏi có cùng mục đích, nội dung hoặc cấu trúc, kể cả nếu chúng chỉ khác nhau về:\n",
-    "  - Tên người (ví dụ: Lê Tuấn Vũ vs Bùi Ngọc Quỳnh)\n",
-    "  - Ngày tháng, địa điểm, số liệu cụ thể\n",
-    "  - Câu chữ diễn đạt khác nhau nhưng ý nghĩa giống nhau\n",
-    "- Ưu tiên **ý nghĩa tổng thể**, không cần giống từng chữ\n",
-    "- Nếu thấy phù hợp, hãy dùng placeholder như: `{{PERSON}}`, `{{DEVICE}}`, `{{LOCATION}}`, `{{DATE}}`, `{{NAME}}`, `{{USERNAME}}`... để gom các câu hỏi tương tự nhau\n",
-    "- Hợp nhất luôn cả các câu hỏi cùng ý nghĩa nhưng khác địa danh cụ thể như: \"Tây Ninh có bao nhiêu thiết bị Anten\", \"Vũng Tàu có bao nhiêu thiết bị Anten\" → nhóm vào \"bao nhiêu thiết bị Anten ở {{LOCATION}}\"\n",
+    "🎯 Nhiệm vụ:\n",
+    "1. Đọc danh sách các câu hỏi dưới đây.\n",
+    "2. Gom các câu hỏi có nội dung hoặc mục đích tương tự thành **cùng một nhóm chủ đề** (ví dụ: câu hỏi về sự cố, thiết bị, người dùng, lịch bảo dưỡng, quyền truy cập...).\n",
+    "3. Mỗi nhóm cần có:\n",
+    "   - Một **tiêu đề chủ đề khái quát** (ngắn gọn, rõ ràng, ví dụ: \"Sự cố\", \"Người dùng\", \"Tài sản\", v.v.).\n",
+    "   - Một **câu hỏi đại diện** cụ thể nhất trong nhóm đó (ví dụ tiêu biểu).\n",
+    "   - **Số lượng câu hỏi** thuộc nhóm đó (tần suất).\n",
+    "4. Sắp xếp kết quả theo **số lượng câu hỏi giảm dần**.\n",
+    "5. Trình bày theo bảng văn bản. Mỗi dòng gồm:\n",
+    "   `Số lượng | Chủ đề | Câu hỏi đại diện`\n",
+    "6. Không tạo JSON, không tạo danh sách chi tiết từng câu, không mô tả thừa, chỉ liệt kê bảng kết quả cuối cùng.\n",
     "\n",
-    "📦 Kết quả đầu ra:\n",
-    "- Trả về danh sách các nhóm câu hỏi dưới dạng JSON. Mỗi nhóm có cấu trúc:\n",
-    "{{\n",
-    "  \"representative\": \"Câu hỏi đại diện cho nhóm (có thể dùng placeholder)\",\n",
-    "  \"count\": Số lượng câu hỏi trong nhóm,\n",
-    "  \"similar_questions\": [Danh sách các câu hỏi trong nhóm]\n",
-    "}}\n",
-    "\n",
-    "📌 Lưu ý:\n",
-    "- Không thêm bất kỳ đoạn văn, giải thích, tiêu đề hoặc ký tự ngoài danh sách JSON\n",
-    "- Trả về danh sách JSON duy nhất\n",
-    "\n",
-    "Dưới đây là danh sách câu hỏi cần gom nhóm:\n",
-    "{chr(10).join(f\"- {q}\" for q in questions_unique)}\n",
+    "Dưới đây là danh sách câu hỏi:\n",
+    "{chr(10).join(f\"- {q}\" for q in questions)}\n",
     "\"\"\"\n",
     "\n",
-    "# 🔗 Gọi API GPT\n",
+    "# 🔗 Gọi OpenAI API\n",
     "response = openai.ChatCompletion.create(\n",
-    "    model=\"gpt-4o-mini\",  # hoặc gpt-3.5-turbo\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    temperature=0.2,\n",
     "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"Bạn là trợ lý chuyên gom nhóm nội dung trùng lặp.\"},\n",
+    "        {\"role\": \"system\", \"content\": \"Bạn là trợ lý chuyên phân tích và thống kê dữ liệu văn bản.\"},\n",
     "        {\"role\": \"user\", \"content\": prompt}\n",
-    "    ],\n",
-    "    temperature=0.2\n",
+    "    ]\n",
     ")\n",
-    "# 🧪 Xử lý kết quả GPT\n",
+    "\n",
+    "# 📋 In kết quả trả về\n",
     "result_text = response.choices[0].message.content.strip()\n",
-    "\n",
-    "# Trích JSON\n",
-    "import re\n",
-    "match = re.search(r\"\\[.*\\]\", result_text, re.DOTALL)\n",
-    "if match:\n",
-    "    raw_json_text = match.group(0)\n",
-    "    try:\n",
-    "        grouped = json.loads(raw_json_text)\n",
-    "    except json.JSONDecodeError as e:\n",
-    "        print(\"❌ Lỗi JSON:\", e)\n",
-    "        print(\"⛔ Nội dung JSON GPT trả về:\")\n",
-    "        print(raw_json_text)\n",
-    "        exit()\n",
-    "else:\n",
-    "    print(\"❌ Không tìm thấy danh sách JSON từ GPT.\")\n",
-    "    print(\"⛔ Nội dung toàn bộ GPT trả về:\")\n",
-    "    print(result_text)\n",
-    "    exit()\n",
-    "\n",
-    "# Loại bỏ câu hỏi trùng trong nhóm sau khi GPT trả về kết quả\n",
-    "for group in grouped:\n",
-    "    group['similar_questions'] = list(set(group['similar_questions']))\n",
-    "\n",
-    "# 📊 Đưa vào DataFrame\n",
-    "df = pd.DataFrame(grouped).sort_values(by=\"count\", ascending=False)\n",
-    "\n",
-    "# 🧪 Thống kê các câu hỏi trùng lặp\n",
-    "question_counts = pd.Series([q for group in grouped for q in group['similar_questions']]).value_counts()\n",
-    "\n",
-    "# In các câu hỏi lặp lại từ 4 lần trở lên\n",
-    "repeated_questions = question_counts[question_counts >= 2]\n",
-    "print(\"📋 Các câu hỏi lặp lại ít nhất 2 lần:\")\n",
-    "print(repeated_questions)\n",
-    "\n",
-    "# 🖨️ In bảng nhóm câu hỏi tương tự (1 câu đại diện mỗi nhóm)\n",
-    "print(\"📋 Bảng nhóm câu hỏi tương tự (1 câu đại diện mỗi nhóm):\")\n",
-    "print(df[[\"representative\", \"count\"]].to_string(index=False))\n",
-    "\n",
-    "# 📈 Vẽ biểu đồ\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "top_n = df.head(30)\n",
-    "sns.barplot(x=top_n[\"count\"], y=top_n[\"representative\"], palette=\"coolwarm\")\n",
-    "plt.title(\"Top 20 nhóm câu hỏi trùng hoặc gần giống nhau\")\n",
-    "plt.xlabel(\"Tần suất\")\n",
-    "plt.ylabel(\"Câu hỏi đại diện\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "print(\"\\n📋 TẦN SUẤT CÁC CÂU HỎI TRÙNG LẶP NHIỀU NHẤT:\\n\")\n",
+    "print(result_text)\n"
    ]
   }
  ],
