Remove all secrets and API keys

--- a/sparknlp+openai api thong ke tan suat.ipynb
+++ b/sparknlp+openai api thong ke tan suat.ipynb
@@ -64,7 +64,7 @@
     "grouped_data.sort(reverse=True)\n",
     "\n",
     "# 🔑 GPT dùng để đặt tên chủ đề cho nhóm\n",
-    "openai.api_key = \"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\"  # Điền API key\n",
+    "openai.api_key = \"\"  # Điền API key\n",
     "\n",
     "# 🧾 Tạo prompt để đặt tên nhóm\n",
     "topic_prompt = \"Hãy đặt tiêu đề chủ đề ngắn gọn cho mỗi nhóm từ khóa sau.\\n\" \\\n",
