--- a/cleanfilewithopenaiapi.ipynb
+++ b/cleanfilewithopenaiapi.ipynb
@@ -29,7 +29,7 @@
     "import json\n",
     "import difflib\n",
     "\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"\"\n",
     "\n",
     "# 📂 Đọc dữ liệu\n",
     "with open(\"/opt/workspace/data.jsonl\", \"r\", encoding=\"utf-8\") as f:\n",
