Update thống kê theo 5 phân loại extend done.ipynb

--- a/thống kê theo 5 phân loại extend done.ipynb
+++ b/thống kê theo 5 phân loại extend done.ipynb
@@ -118,7 +118,7 @@
     "print(f\"✅ Nhóm ngữ nghĩa: {time.time() - t6:.2f} giây\")\n",
     "\n",
     "# --- 7. Cấu hình Gemini ---\n",
-    "GEMINI_API_KEY = \"AIzaSyBRRCysUg0kCd1rLPA8dt0LwP-BS1hC9SQ\"  # 🛠️ Thay bằng key hợp lệ\n",
+    "GEMINI_API_KEY = ""  # 🛠️ Thay bằng key hợp lệ\n",
     "genai.configure(api_key=GEMINI_API_KEY)\n",
     "gemini_model = genai.GenerativeModel(\"gemini-2.5-pro-preview-03-25\")\n",
     "\n",
